# Lizzy

./: .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTORS  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yaml
docs/: validation.md
docs/github/: validation.md
docs/github/tutorials/: radial_aniso.md  rect.md  triforce.md
docs/source/: components.rst  conf.py  index.rst  installation.rst  refs.bib  tutorials.rst
docs/source/components/: IO.rst
docs/source/tutorials/: anisotropy.rst  channel_flow.rst  complex.rst
docs/tutorials/: radial_aniso.md  rect.md  triforce.md
examples/meshes/: Complex.msh  Complex_rotated.msh  Radial.msh  Rect1M_R0.msh  Rect1M_R1.msh  Rect1M_R1_struct.msh  Rect1M_R2.msh  Rect1M_R3.msh  Triforce_R1.msh
examples/scripts/: channel_infusion.py  complex.py  multi_materials.py  radial_infusion.py
lizzy/: __init__.py  bcond.py  materials.py  simparams.py  splash_logo.py
lizzy/IO/: IO.py  geometry.py
lizzy/controls/: __init__.py
lizzy/cvmesh/: collections.py  constr.py  cvmesh.py  entities.py
lizzy/solver/: __init__.py  fem.py  fillsolver.py  psolvers.py  solver.py  timestep.py  vsolvers.py
lizzy/solver/builtin/: direct_solvers.py  iter_solvers.py
tests/: __init__.py  test_rect.py
tests/test_meshes/: Rect_1M_1024elem.msh  Rect_1M_16elem.msh  Rect_1M_256elem.msh  Rect_1M_4096elem.msh  Rect_1M_64elem.msh
